<resources>
    <string name="app_name">Cuentas</string>
    <string name="seconds_ago">%1$ds ago</string>
    <string name="minutes_ago">%1$d min ago</string>
    <string name="today_at">today at %1$s</string>
    <string name="yesterday_at">yesterday at %1$s</string>
    <string name="expense">Expense</string>
    <string name="earning">Earning</string>
    <string name="name">Name</string>
    <string name="add">Add</string>
    <string name="quantity">Quantity</string>
    <string name="cancel">Cancel</string>
    <string name="new_expense">New expense</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>