<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddExpense">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="?colorPrimary"
        android:enabled="true"
        android:onClick="add"
        android:text="@string/add"
        android:textAllCaps="true"
        android:textColor="?colorOnPrimary"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/cancelButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EarningOrExpense" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="cancel"
        android:text="@string/cancel"
        app:layout_constraintBaseline_toBaselineOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button" />

    <EditText
        android:id="@+id/ExpenseName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textColor="?android:textColorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ExpenseQuantity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/quantity"
        android:inputType="number|numberDecimal"
        android:numeric="integer|decimal"
        android:textColor="?android:textColorPrimary"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ExpenseName" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="€"
        android:textColor="?android:textColorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/ExpenseQuantity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ExpenseQuantity" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/EarningOrExpense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:checked="true"
        android:onClick="switchExpense"
        android:textAllCaps="true"
        android:textColor="?android:textColorPrimary"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ExpenseQuantity"
        app:thumbTint="@color/expense"
        app:trackTint="@color/expenseTranslucent"
        app:trackTintMode="src_in" />

    <TextView
        android:id="@+id/EarningOrExpenseLabelText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/expense"
        android:textColor="?android:textColorSecondary"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/EarningOrExpense"
        app:layout_constraintEnd_toStartOf="@+id/EarningOrExpense"
        app:layout_constraintStart_toEndOf="@+id/EarningOrExpenseIcon"
        app:layout_constraintTop_toTopOf="@+id/EarningOrExpense" />

    <ImageView
        android:id="@+id/EarningOrExpenseIcon"
        android:layout_width="34dp"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/EarningOrExpense"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/EarningOrExpense"
        app:srcCompat="@drawable/expense" />

</androidx.constraintlayout.widget.ConstraintLayout>